src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
	* {
		@apply font-sans;
	}
	h1 {
		font-weight: 100;
		font-size: 3.5em;
		padding: 0.25em;
		display: inline-block;
		line-height: 1;
	}
	header {
		padding: 0.25em;
		text-align: center;
		box-sizing: border-box;
	}
	p {
		padding: 0.5em;
		margin: 0 1em;
		text-align: center;
		line-height: 1;
	}
	h2 {
		font-weight: 100;
		font-size: 2em;
	}
	a:hover {
		text-decoration-line: underline;
	}
	@media screen and (min-width: 640px) {
		h1 {
			font-size: 4em;
		}
	}
}

